// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Renders the primary button component 1`] = `
<div>
  <button
    class="css-1o9np2w-ButtonStyles-primary e10ohzgh0"
    type="button"
  />
</div>
`;

exports[`<Button /> Renders the secondary button component 1`] = `
<div>
  <button
    class="css-leptw7-ButtonStyles-secondary e10ohzgh0"
    type="button"
  />
</div>
`;
